<resources>
    <string name="app_name">AddressPlus</string>

    <string name="menuabout">About</string>
    <string name="menuclear">Clear</string>

    <string name="aboutTitle">About</string>
    <string name="aboutMsg">MyAddressPlus is a nice and simple Android Application that allows a user to query/insert/update/delete his home address. It is written for android API 28 or newer. It suports Tablets.</string>


    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="postalcode">Potal Code</string>
    <string name="submit">CONFIRM</string>

    <string name="no_address"></string>
    <string name="menu_delete">Delete Address</string>

</resources>
